--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-10-12 Mickael Marchand <marchand@kde.org>
+    * New subversion part added to replace the old svn one
+
 2003-10-11 F@lk Brettschneider <falkbr@kdevelop.org>
     * now I've started again fixing the MDI user interfaces which are quite broken at present
 
