--- a/doc/api/HowToAddProgrammingLanguages.dox
+++ b/doc/api/HowToAddProgrammingLanguages.dox
@@ -7,8 +7,8 @@
 \section LSupport List of things to have "complete" support of a given language in KDevelop
 
   - Implement interface KDevLanguageSupport
-  - Language parser for class browser
   - \ref sectionQtUiSubclassing - (if the language has Qt bindings)
+  - \ref sectionLanguageParser
   - \ref sectionCodeCompletion
   - \ref sectionProblemReporter - (parses source on the fly and reports syntax errors)
   - Syntax highlighter - (add to QEditor if not available elsewhere)
@@ -50,19 +50,23 @@ The template is located in <code>languages/cpp/app_templates/kdevlang</code>, yo
 standalone part (check out KDevelop part (Standalone build) application
 template in KDevelop).
 
-You should look at <code>parts/rubysupport</code> for a simple language support
-implementation. For a compilable language support, consult <code>parts/adasupport</code> or <code>parts/pascalsupport</code> (they are not so complex as <code>parts/cppsupport</code>).
+You should look at <code>languages/ruby</code> for a simple language support
+implementation. For a compilable language support, consult <code>languages/ada</code> or <code>languages/pascal</code> (they are not so complex as <code>languages/cpp</code>).
 
 Pascal would be a good starting place, as it is the smaller of the two by far.
 
 Language support can offer additional features:
-  - new class wizard: (See <code>adasupport, phpsupport, cppsupport</code> or <code>javasupport</code>)
+
+\subsection sectionClassWizard Class wizard
+  - new class wizard: (See <code>ada, php, cpp</code> or <code>java</code>)
     - <code>virtual void addClass();</code>
     .
-  - add method dialog: (See <code>cppsupport</code> or <code>javasupport</code>)
+
+\subsection sectionAttributeMethodWizard Attribute/Method wizard
+  - add method dialog: (See <code>cpp</code> or <code>java</code>)
     - <code>virtual void addMethod(const QString &className);</code>
     .
-  - add attribute dialog: (See <code>cppsupport</code> or <code>javasupport</code>)
+  - add attribute dialog: (See <code>cpp</code> or <code>java</code>)
     - <code>virtual void addAttribute(const QString &className);</code>
     .
   .
@@ -76,9 +80,15 @@ to use QtDesigner ui files, you could implement ui subclassing feature:
         fileName);</code>
   .
 
-See <code>cppsupport</code> and <code>javasupport</code> for examples.
+See <code>cpp</code> and <code>java</code> for examples.
 
-\subsection ClStore Class Store
+\subsection sectionLanguageParser Language parser
+
+In general, class stores can be filled with information without specialized
+and complex language parsers (take a look at <code>languages/python</code> that have a very simple python parser) but your language support will surely benefit
+from having such. There is a hand-written c/c++ parser (<code>lib/cppparser</code>) in KDevelop that might be used for ObjC or related C-based languages. Other (not so complex as c++) languages can be parsed by ANTLR based parsers (library is in lib/antlr). Consult www.antlr.org for a ANTLR documentation and look at <code>languages/java</code>, <code>languages/ada</code> and <code>languages/pascal</code> for an example of using such parsers. The latest version of ANTLR (2.7.2) has support for Java, C, Pascal, Ada, C++, CIM, HTML, IDL, Verilog, VRML, OCL, ASN.1, and SQL. You can write an ANTLR parser for your own language, of course.
+
+\subsection ClStore Class store
 
 If you write (or have) a language parser, your language support can have
 "class store" (a database containing the information about scopes, classes
@@ -87,41 +97,37 @@ etc.). Class store libraries can be found at <code>lib/catalog</code> (Catalog) 
 
 KDevelop provides class browsers that extract information from a <B>class store</B> and display it in a tree view and toolbar selectors of scopes, classes and methods.
 
-\subsubsection sectionMemoryClassStore Memory Class Store
+\subsubsection sectionMemoryClassStore Memory class store
 CodeModel is the memory class store. It is very efficient and thus it is recommended for using as a project class store. CodeModel libraries are located in <code>lib/interfaces/codemodel.h</code>. The class browser for a CodeModel based stores is <code>parts/classview</code>.
 
-\subsubsection sectionPersistantClassStore Persistant Class Store
+\subsubsection sectionPersistantClassStore Persistant class store
 Catalog is the persistant class store for KDevelop. Persistant class store can be used as an information storage for code completion but it also can be used as a class store for the project. Take a look at
-<code>parts/cppsupport</code> for an example of using catalog. Catalog is stored on disk in the database file (Berkeley db) If you use catalog with the project, your class browser will be <code>parts/classbrowser</code>.
+<code>languages/cpp</code> for an example of using catalog. Catalog is stored on disk in the database file (Berkeley db) If you use catalog with the project, your class browser will be <code>parts/classbrowser</code>.
 
 \subsection sectionCodeCompletion Code completion
 Class store enables you to write a code completion for the language. At the
-moment (2003-06-25), code completion is available only to cppsupport so take a
+moment (2003-06-25), code completion is available only to cpp so take a
 look at it for an example.
 
-In general, class stores can be filled with information without specialized
-and complex language parsers (take a look at <code>parts/pythonsupport</code> that have a very simple python parser) but your language support will surely benefit
-from having such. There is a hand-written c/c++ parser (<code>lib/cppparser</code>) in KDevelop that might be used for ObjC or related C-based languages. Other (not so complex as c++) languages can be parsed by ANTLR based parsers (library is in lib/antlr). Consult www.antlr.org for a ANTLR documentation and look at <code>parts/javasupport</code>, <code>parts/adasupport</code> and <code>parts/pascalsupport</code> for an example of using such parsers. The latest version of ANTLR (2.7.2) has support for Java, C, Pascal, Ada, C++, CIM, HTML, IDL, Verilog, VRML, OCL, ASN.1, and SQL. You can write an ANTLR parser for your own language, of course.
-
-\subsection sectionProblemReporter Problem Reporter
+\subsection sectionProblemReporter Problem reporter
 
 If you have a language parser, you can implement <B>problem reporter</B>
 functionality for your language. The problem reporter catches errors
 reported by a parser and displays it in a problem reporter view.
-<code>parts/javasupport</code>, <code>parts/adasupport</code>, <code>parts/pascalsupport</code> and <code>parts/cppsupport</code> have problem reporters.
+<code>languages/java</code>, <code>languages/ada</code>, <code>languages/pascal</code> and <code>languages/cpp</code> have problem reporters.
 
 \subsection Templ Templates
 
-\subsubsection sectionApplicationTemplates Application Wizard Templates
+\subsubsection sectionApplicationTemplates Application templates
 
 <B>Application wizard</B> templates should be also written. Appwizard templates are simple to create - consult \ref howToAddApplicationTemplates (HowToAddApplicationTemplates.dox file)
 and look at <code>languages/ruby/app_templates/rubyhello</code>, <code>languages/pascal/app_templates/pascalhello</code>, or <code>languages/ada/app_templates/adahello</code>.
 
-\subsubsection sectionApplicationImportTemplates Application wizard import templates
+\subsubsection sectionApplicationImportTemplates Application import templates
 
 To be written.
 
-\subsubsection sectionSourceFileTemplates Source File Templates
+\subsubsection sectionSourceFileTemplates Source file templates
 
 Another thing to do is to create <B>file create templates</B>. They are prototypes for a source files of your language. These prototypes are placed in
 <code>parts/filecreate/file-templates</code> dir or <code>languages/YOURLANGUAGE/file_templates</code> and have names equal to the extensions of language source files.
@@ -129,15 +135,15 @@ The description of the prototypes is placed in <code>parts/filecreate/template-i
 
 Consult FileCreatePart (parts/filecreate/README.dox file) and \ref howToAddFileTemplates for further information.
 
-\subsubsection sectionAbbreviationTemplates Code Abbreviation Templates
+\subsubsection sectionAbbreviationTemplates Code abbreviation templates
 
-KDevelop has a support for <B>code abbreviations</B> so you can add some predefined abbreviations to your language support. Take <code>parts/cppsupport/cpptemplates</code> as an example.
+KDevelop has a support for <B>code abbreviations</B> so you can add some predefined abbreviations to your language support. Take <code>languages/cpp/cpptemplates</code> as an example.
 
 
-\subsection sectionSourceCodeFormater Source Code Formater
+\subsection sectionSourceCodeFormater Source code formater
 
 Implement a KDevSourceFormater class interface.
-To obtain source formatter functionality (that is already available to
+To obtain source formater functionality (that is already available to
 c-based languages) you can extend astyle library (<code>lib/astyle</code>) that is used by KDevelop to format sources.
 Take a look at AStylePart for an example how to do it.
 
@@ -148,8 +154,8 @@ Add them to doc/extras for an example see doc/extras/python.toc and doc/extras/p
 \subsection sectionDebugger Debugger
 
 The last thing to have a complete language support in KDevelop is to
-write a <B>Debugger support</B>. KDevelop already provides GDB support
-(<code>parts/debugger</code>) and JDB (java debugger) support (<code>parts/javadebugger</code>). Take a look at them to get inspiration.
+write a <B>Debugger </B>. KDevelop already provides GDB support
+(<code>languages/cpp/debugger</code>) and JDB (java debugger) support (<code>languages/java/debugger</code>). Take a look at them to get inspiration.
 
 \subsection sectionCompilerPlugins Compiler plugins
 
