--- a/doc/api/Architecture.dox
+++ b/doc/api/Architecture.dox
@@ -160,8 +160,8 @@ These parts implement a KDevVersionControl Class interface.
   - vcs/perforce = Version managment system perforce integration
     - (see PerforcePart)
     .
-  - vcs/svn = Subversion integration
-    - (see SvnPart)
+  - vcs/subversion = Subversion integration
+    - (see subversionPart)
     .
   .
 
