--- a/doc/api/EditorsSupportStatus.dox
+++ b/doc/api/EditorsSupportStatus.dox
@@ -4,15 +4,17 @@
 
 /** \page EditorsSupportStatus Editors Support Status
 
-<table border="1"
- style="text-align: left; margin-left: auto; margin-right: auto;" cellpadding="2" cellspacing="2">
-  <tbody>
+Kate and Kvim are part of KDE and KDevelop just uses them.
+
+qeditor and Nedit are interfaced via KDevelop's code. You can look at their code at <code>editors/qeditor</code> and <code>editors/nedit</code>.
+
+<table border="1" style="text-align: left; margin-left: auto; margin-right: auto;" cellpadding="2" cellspacing="2">
     <tr>
-      <td style="text-align: center;">features/editor</td>
-      <td style="text-align: center;">kate</td>
-      <td style="text-align: center;">kvim</td>
-      <td style="text-align: center;">qeditor</td>
-      <td style="text-align: center;">Nedit</td>
+      <th style="text-align: center;">features/editor</th>
+      <th style="text-align: center;">kate</th>
+      <th style="text-align: center;">kvim (not available yet!)</th>
+      <th style="text-align: center;">qeditor</th>
+      <th style="text-align: center;">Nedit (Disabled)</th>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 204, 0);">Advanced text editor</td>
@@ -30,94 +32,59 @@
     </tr>
     <tr>
       <td>Undo and redo</td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td><br>
-      </td>
+      <td>Y</td>
+      <td>N</td>
+      <td>Y</td>
+      <td></td>
     </tr>
     <tr>
       <td>Jump in text: next/previous character, word.</td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td>Y<br>
-      </td>
+      <td>Y</td>
+      <td>N</td>
+      <td>Y</td>
+      <td>Y</td>
     </tr>
     <tr>
-      <td>Jump to start or the end of the line/text<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td>Y<br>
-      </td>
+      <td>Jump to start or the end of the line/text</td>
+      <td>Y</td>
+      <td>N</td>
+      <td>Y</td>
+      <td>Y</td>
     </tr>
     <tr>
       <td>Go to line</td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td><br>
-      </td>
+      <td>Y</td>
+      <td>N</td>
+      <td>Y</td>
+      <td></td>
     </tr>
     <tr>
-      <td>Select text when jumping (character, word, line), <br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td><br>
-      </td>
+      <td>Select text when jumping (character, word, line), </td>
+      <td>Y</td>
+      <td>N</td>
+      <td>Y</td>
+      <td></td>
     </tr>
     <tr>
       <td>Select all the text</td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td><br>
-      </td>
+      <td>Y</td>
+      <td>N</td>
+      <td>Y</td>
+      <td></td>
     </tr>
     <tr>
       <td>Copy, paste and delete selections of text</td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td><br>
-      </td>
+      <td>Y</td>
+      <td>N</td>
+      <td>Y</td>
+      <td></td>
     </tr>
     <tr>
-      <td>Print<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td><br>
-      </td>
+      <td>Print</td>
+      <td>Y</td>
+      <td>N</td>
+      <td>Y</td>
+      <td></td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 204, 0);">Advanced text view:</td>
@@ -128,91 +95,59 @@
     </tr>
     <tr>
       <td>Horizontal and vertical scrolling</td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td><br>
-      </td>
+      <td>Y</td>
+      <td>N</td>
+      <td>Y</td>
+      <td></td>
     </tr>
     <tr>
       <td>Display selections</td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td><br>
-      </td>
+      <td>Y</td>
+      <td>N</td>
+      <td>Y</td>
+      <td></td>
     </tr>
     <tr>
       <td>Mouse Wheel support</td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td><br>
-      </td>
+      <td>Y</td>
+      <td>N</td>
+      <td>Y</td>
+      <td></td>
     </tr>
     <tr>
       <td>Dynamic word wrap</td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td><br>
-      </td>
-      <td><br>
-      </td>
+      <td>Y</td>
+      <td>N</td>
+      <td></td>
+      <td></td>
     </tr>
     <tr>
       <td>Line numbers</td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td><br>
-      </td>
-      <td><br>
-      </td>
+      <td>Y</td>
+      <td>N</td>
+      <td></td>
+      <td></td>
     </tr>
     <tr>
       <td>Show tabs</td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td><br>
-      </td>
-      <td><br>
-      </td>
+      <td>Y</td>
+      <td>N</td>
+      <td></td>
+      <td></td>
     </tr>
     <tr>
       <td>Find in file</td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td><br>
-      </td>
+      <td>Y</td>
+      <td>N</td>
+      <td>Y</td>
+      <td></td>
     </tr>
     <tr>
       <td>Replace in file</td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td><br>
-      </td>
+      <td>Y</td>
+      <td>N</td>
+      <td>Y</td>
+      <td></td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 204, 0);">Coding specific properties:</td>
@@ -223,54 +158,32 @@
     </tr>
     <tr>
       <td>Syntax highlighting</td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td><br>
-      </td>
+      <td>Y</td>
+      <td>N</td>
+      <td>Y</td>
+      <td></td>
     </tr>
     <tr>
       <td>Code folding</td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td><br>
-      </td>
-      <td><br>
-      </td>
+      <td>Y</td>
+      <td>N</td>
+      <td></td>
+      <td></td>
     </tr>
     <tr>
       <td>Spell</td>
-      <td>Y<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td><br>
-      </td>
-      <td><br>
-      </td>
+      <td>Y</td>
+      <td>N</td>
+      <td></td>
+      <td></td>
     </tr>
     <tr>
       <td>Auto indendt</td>
-      <td>N<br>
-      </td>
-      <td>N<br>
-      </td>
-      <td>Y<br>
-      </td>
-      <td><br>
-      </td>
+      <td>N</td>
+      <td>N</td>
+      <td>Y</td>
+      <td></td>
     </tr>
-  </tbody>
 </table>
-
-Kate and Kvim are part of KDE and KDevelop just uses them.
-
-qeditor and Nedit are interfaced via KDevelop's code. You can look at their code at <code>editors/qeditor</code> and <code>editors/nedit</code>.
-
 
 */
