Updated the Debian packages. They have been renamed to kdevelop3* so that they can be installed at the same time as the KDevelop 2.1 packages.
The package names are
kdevelop3
kdevelop3-data
kdevelop3-plugins
kdevelop3-doc
kdevelop3-dev

For Debian Stable, use the following Apt source lines:
deb http://people.debian.org/~njordan stable main
deb-src http://people.debian.org/~njordan/stable source/

For Debian Unstable, use the following Apt source lines:
deb http://people.debian.org/~njordan unstable main
deb-src http://people.debian.org/~njordan/unstable source/

Norman Jordan

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+kdevelop3 (4:3.0-00cvs20031013) unstable; urgency=low
+
+  * Updated CVS sources
+  * Change the package names again to kdevelop3*
+    - Now KDevelop 3 and KDevelop 2 can be installed at the same time
+
+ -- Norman Jordan <njordan@debian.org>  Mon, 13 Oct 2003 23:05:06 -0700
+
 kdevelop (4:2.999-0cvs20031006) unstable; urgency=low
 
   * Updated CVS sources
