Activated Doxygen PHP based search engine. Changed the name of the "KDevelop 3 Architecture" page to be conformant with the kde-common/appheader.html file. Explains how and when to use the new search engine.

--- a/doc/api/Architecture.dox
+++ b/doc/api/Architecture.dox
@@ -2,7 +2,7 @@
   * \brief KDevelop architecture
   */
 
-/** \page KDev3Arch KDevelop 3 Architecture
+/** \page architecture KDevelop 3 Architecture
 
 KDevelop uses a plugin based architecture. This will be explained in more
 detail in the next sections. To add a new plugin check the \ref howToAddPlugins page.
